force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/Apttus_Config2__ConstraintRuleCondition__c.object-meta.xml
<CustomObject>
    <description>Captures information about condition of a constraint rule. In order for a rule to trigger all or some of the rule conditions should be true and the combining expression should be true.</description>
    <label>Constraint Rule Condition</label>
    <nameField>
        <label>Constraint Rule Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>