force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ConditionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConditionCriteria__c</fullName>
    <description>Represents criteria for the rule condition</description>
    <label>Condition Criteria</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>