force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductScope__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductScope__c</fullName>
    <label>Product Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Product Group</fullName>
            </value>
            <value>
                <fullName>Product Field Set</fullName>
            </value>
            <value>
                <fullName>Header Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>